--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,73 @@ Experiments/data/*
 Experiments/SerializationJava.jar
 Experiments/loging.log
 Java/target/*
+C++/.idea/.gitignore
+C++/.idea/.name
+C++/.idea/C++.iml
+C++/.idea/misc.xml
+C++/.idea/modules.xml
+C++/.idea/vcs.xml
+C++/cmake-build-debug/CMakeCache.txt
+C++/cmake-build-debug/CMakeFiles/clion-environment.txt
+C++/cmake-build-debug/CMakeFiles/clion-log.txt
+C++/cmake-build-debug/CMakeFiles/cmake.check_cache
+C++/cmake-build-debug/CMakeFiles/CMakeOutput.log
+C++/cmake-build-debug/CMakeFiles/3.20.2/CMakeCCompiler.cmake
+C++/cmake-build-debug/CMakeFiles/3.20.2/CMakeCXXCompiler.cmake
+C++/cmake-build-debug/CMakeFiles/3.20.2/CMakeDetermineCompilerABI_C.bin
+C++/cmake-build-debug/CMakeFiles/3.20.2/CMakeDetermineCompilerABI_CXX.bin
+C++/cmake-build-debug/CMakeFiles/3.20.2/CMakeSystem.cmake
+C++/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/a.out
+C++/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/CMakeCCompilerId.c
+C++/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/a.out
+C++/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+Java/src/main/cpp/.idea/.gitignore
+Java/src/main/cpp/.idea/cpp.iml
+Java/src/main/cpp/.idea/misc.xml
+Java/src/main/cpp/.idea/modules.xml
+Java/src/main/cpp/.idea/vcs.xml
+Java/src/main/cpp/cmake-build-debug/cmake_install.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeCache.txt
+Java/src/main/cpp/cmake-build-debug/cpp.cbp
+Java/src/main/cpp/cmake-build-debug/Makefile
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/clion-environment.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/clion-log.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/cmake.check_cache
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/CMakeOutput.log
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/Makefile.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/Makefile2
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/progress.marks
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CMakeCCompiler.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CMakeCXXCompiler.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CMakeDetermineCompilerABI_C.bin
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CMakeDetermineCompilerABI_CXX.bin
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CMakeSystem.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/a.out
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/CMakeCCompilerId.c
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/a.out
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/build.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/cmake_clean.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/depend.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/DependInfo.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/flags.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/link.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataPrepare.dir/progress.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/build.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/cmake_clean.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/depend.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/DependInfo.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/flags.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/link.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/DataSerializationSingle.dir/progress.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/build.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/cmake_clean.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/depend.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/DependInfo.cmake
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/flags.make
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/link.txt
+Java/src/main/cpp/cmake-build-debug/CMakeFiles/TwitterSerialization.dir/progress.make
+Java/src/main/cpp/cmake-build-debug/Testing/Temporary/LastTest.log
+Java/src/main/cpp/Testing/Temporary/LastTest.log
