--- a/Java/src/main/cpp/CMakeLists.txt
+++ b/Java/src/main/cpp/CMakeLists.txt
@@ -19,8 +19,6 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/libraries")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/tools/cmake")
 set(CTEST_BINARY_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
 
-#target_compile_options (cpp PUBLIC -fexceptions)
-
 # check the operating system and add the appropriate flags
 if (APPLE)
     SET(CMAKE_CXX_FLAGS " -std=c++11 -g -fPIC -Wno-deprecated-declarations")
@@ -58,21 +56,21 @@ file(GLOB srcProtobufcc "${PROJECT_SOURCE_DIR}/serialization/source/proto/*.cc")
 file(GLOB srcFlatbuf "${PROJECT_SOURCE_DIR}/serialization/source/flatbuffers/*.cpp")
 
 
-# prepare data
-add_executable(DataPrepare
-        experiments/DataPrepare.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataPrepare PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataPrepare PRIVATE mongo::mongocxx_shared)
-
-# prepare data
+## prepare data
+#add_executable(DataPrepare
+#        experiments/DataPrepare.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataPrepare PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataPrepare PRIVATE mongo::mongocxx_shared)
+#
+# load data to memory- single thread
 add_executable(DataLoadToMemorySingle
         experiments/DataLoadToMemorySingle.cpp
         ${srcIO}
@@ -85,6 +83,21 @@ add_executable(DataLoadToMemorySingle
         )
 target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::bsoncxx_shared)
 target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::mongocxx_shared)
+
+# load data to memory- multi thread
+add_executable(DataLoadToMemoryParallel
+        experiments/DataLoadToMemoryParallel.cpp
+        ${srcIO}
+        ${srcUtil}
+        ${srcSerialization}
+        ${srcInPlace}
+        ${srcProtobuf}
+        ${srcProtobufcc}
+        ${srcFlatbuf}
+        )
+target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::bsoncxx_shared)
+target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::mongocxx_shared)
+
 
 # serialize data single thread
 add_executable(DataSerializationSingle
@@ -100,9 +113,9 @@ add_executable(DataSerializationSingle
 target_link_libraries(DataSerializationSingle PRIVATE mongo::bsoncxx_shared)
 target_link_libraries(DataSerializationSingle PRIVATE mongo::mongocxx_shared)
 
-# serialize data single thread
-add_executable(DataWriteSingle
-        experiments/DataWriteSingle.cpp
+# serialize data multi thread
+add_executable(DataSerializationParallel
+        experiments/DataSerializationParallel.cpp
         ${srcIO}
         ${srcUtil}
         ${srcSerialization}
@@ -111,8 +124,24 @@ add_executable(DataWriteSingle
         ${srcProtobufcc}
         ${srcFlatbuf}
         )
-target_link_libraries(DataWriteSingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataWriteSingle PRIVATE mongo::mongocxx_shared)
+target_link_libraries(DataSerializationParallel PRIVATE mongo::bsoncxx_shared)
+target_link_libraries(DataSerializationParallel PRIVATE mongo::mongocxx_shared)
+
+
+#
+## serialize data single thread
+#add_executable(DataWriteSingle
+#        experiments/DataWriteSingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataWriteSingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataWriteSingle PRIVATE mongo::mongocxx_shared)
 
 # read data single thread
 add_executable(DataReadSingle
@@ -128,6 +157,19 @@ add_executable(DataReadSingle
 target_link_libraries(DataReadSingle PRIVATE mongo::bsoncxx_shared)
 target_link_libraries(DataReadSingle PRIVATE mongo::mongocxx_shared)
 
+add_executable(DataReadParallel
+        experiments/DataReadParallel.cpp
+        ${srcIO}
+        ${srcUtil}
+        ${srcSerialization}
+        ${srcInPlace}
+        ${srcProtobuf}
+        ${srcProtobufcc}
+        ${srcFlatbuf}
+        )
+target_link_libraries(DataReadParallel PRIVATE mongo::bsoncxx_shared)
+target_link_libraries(DataReadParallel PRIVATE mongo::mongocxx_shared)
+
 # read I/O data single thread
 add_executable(DataReadIOSingle
         experiments/DataReadIOSingle.cpp
@@ -142,6 +184,20 @@ add_executable(DataReadIOSingle
 target_link_libraries(DataReadIOSingle PRIVATE mongo::bsoncxx_shared)
 target_link_libraries(DataReadIOSingle PRIVATE mongo::mongocxx_shared)
 
+
+# read I/O data multi thread
+add_executable(DataReadIOParallel
+        experiments/DataReadIOParallel.cpp
+        ${srcIO}
+        ${srcUtil}
+        ${srcSerialization}
+        ${srcInPlace}
+        ${srcProtobuf}
+        ${srcProtobufcc}
+        ${srcFlatbuf}
+        )
+target_link_libraries(DataReadIOParallel PRIVATE mongo::bsoncxx_shared)
+target_link_libraries(DataReadIOParallel PRIVATE mongo::mongocxx_shared)
 
 
 
