Update Externalsort Scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1247,3 +1247,35 @@ target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.l
 target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 src/main/cpp/Makefile
 src/main/cpp/CMakeFiles/CMakeError.log
+src/main/cpp/CMakeFiles/my.dir/build.make
+src/main/cpp/CMakeFiles/my.dir/cmake_clean.cmake
+src/main/cpp/CMakeFiles/my.dir/depend.make
+src/main/cpp/CMakeFiles/my.dir/DependInfo.cmake
+src/main/cpp/CMakeFiles/my.dir/flags.make
+src/main/cpp/CMakeFiles/my.dir/link.txt
+src/main/cpp/CMakeFiles/my.dir/progress.make
+src/main/cpp/CMakeFiles/myMain.dir/build.make
+src/main/cpp/CMakeFiles/myMain.dir/cmake_clean.cmake
+src/main/cpp/CMakeFiles/myMain.dir/CXX.includecache
+src/main/cpp/CMakeFiles/myMain.dir/depend.internal
+src/main/cpp/CMakeFiles/myMain.dir/depend.make
+src/main/cpp/CMakeFiles/myMain.dir/DependInfo.cmake
+src/main/cpp/CMakeFiles/myMain.dir/flags.make
+src/main/cpp/CMakeFiles/myMain.dir/link.txt
+src/main/cpp/CMakeFiles/myMain.dir/progress.make
+src/main/cpp/CMakeFiles/myMain.dir/experiments/myMain.cpp.o
+src/main/cpp/CMakeFiles/myMain.dir/util/source/Client.cpp.o
+src/main/cpp/CMakeFiles/myMain.dir/util/source/MachineInfo.cpp.o
+src/main/cpp/CMakeFiles/myMain.dir/util/source/Network.cpp.o
+src/main/cpp/CMakeFiles/myMain.dir/util/source/Server.cpp.o
+src/main/cpp/CMakeFiles/myMain.dir/util/source/Socket.cpp.o
+src/main/cpp/CMakeFiles/myTest.dir/build.make
+src/main/cpp/CMakeFiles/myTest.dir/cmake_clean.cmake
+src/main/cpp/CMakeFiles/myTest.dir/CXX.includecache
+src/main/cpp/CMakeFiles/myTest.dir/depend.internal
+src/main/cpp/CMakeFiles/myTest.dir/depend.make
+src/main/cpp/CMakeFiles/myTest.dir/DependInfo.cmake
+src/main/cpp/CMakeFiles/myTest.dir/flags.make
+src/main/cpp/CMakeFiles/myTest.dir/link.txt
+src/main/cpp/CMakeFiles/myTest.dir/progress.make
+src/main/cpp/CMakeFiles/myTest.dir/experiments/myTest.cpp.o
