--- a/src/main/rust/Cargo.toml
+++ b/src/main/rust/Cargo.toml
@@ -2,7 +2,29 @@
 name = "rust"
 version = "0.1.0"
 edition = "2021"
+autobins = false
+authors = ["Saeed Fathollahzadeh <s.fathollahzadeh@gmail.com>"]
+
+[[bin]]
+name="DataPrepare"
+path = "src/DataPrepare.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build]
+rustflags = ["-Awarnings"]
+
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+
+serde_json = "1.0"
+bincode = "1.3.3"
+rmp-serde = "1.1.0"
+bson = "2.3.0"
+flexbuffers = "2.0.0"
+
+bytes = { version = "0.6.0", features = ["serde"] }
+rand = "0.8.5"
+chrono = "0.4.22"
+bytebuffer-rs = "0.4.0"
+priority-queue = "1.2.3"
