--- a/src/main/rust/Cargo.toml
+++ b/src/main/rust/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/DataPrepare.rs"
 name="DataSerializationSingle"
 path = "src/DataSerializationSingle.rs"
 
+[[bin]]
+name="DataWriteSingle"
+path = "src/DataWriteSingle.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build]
