--- a/src/main/rust/Cargo.toml
+++ b/src/main/rust/Cargo.toml
@@ -10,6 +10,10 @@ name="DataLoadToMemorySingle"
 path = "src/DataLoadToMemorySingle.rs"
 
 [[bin]]
+name="DataLoadToMemoryParallel"
+path = "src/DataLoadToMemoryParallel.rs"
+
+[[bin]]
 name="DataPrepare"
 path = "src/DataPrepare.rs"
 
@@ -18,8 +22,16 @@ name="DataReadSingle"
 path = "src/DataReadSingle.rs"
 
 [[bin]]
+name="DataReadParallel"
+path = "src/DataReadParallel.rs"
+
+[[bin]]
 name="DataReadIOSingle"
 path = "src/DataReadIOSingle.rs"
+
+[[bin]]
+name="DataReadIOParallel"
+path = "src/DataReadIOParallel.rs"
 
 [[bin]]
 name="DataSerializationSingle"
@@ -46,3 +58,7 @@ rand = "0.8.5"
 chrono = "0.4.22"
 bytebuffer-rs = "0.4.0"
 priority-queue = "1.2.3"
+
+num_cpus = "1.13.1"
+threadpool = "1.8.1"
+crossbeam = "0.8"
