--- a/src/main/rust/Cargo.toml
+++ b/src/main/rust/Cargo.toml
@@ -57,9 +57,9 @@ path = "src/ExternalSort.rs"
 name="ExternalSortIO"
 path = "src/ExternalSortIO.rs"
 
-#[[bin]]
-#name="DataReadNetwork"
-#path = "src/DataReadNetwork.rs"
+[[bin]]
+name="DataReadNetwork"
+path = "src/DataReadNetwork.rs"
 
 [build]
 rustflags = ["-Awarnings"]
@@ -85,3 +85,6 @@ csv = "1.1"
 local-ip-address = "0.4.8"
 blockingqueue = "0.1.1"
 byteorder = "1"
+crossbeam-queue = "0.3.6"
+crossbeam-utils = "0.8.11"
+rayon = "1"
